--- a/.github/workflows/script-test.yml
+++ b/.github/workflows/script-test.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./searcher/tests
+        working-directory: ./scripts/tests
 
     steps:
     - uses: actions/checkout@v2
